# kafka-transceiver-rs

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
