[package]
name = "kafka-transceiver-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
clap = { version = "4.4.12", features = ["derive"] }
http = "1.0.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rdkafka = { version = "0.36.0", features = ["cmake-build"] }
reqwest = "0.11.23"
serde = "1.0.193"
serde_json = "1.0.108"
structured-logger = "1.0.3"
tokio = { version = "1.35.1", features = ["full"] }
